# text-scrolling

./: README.md  setup.cfg  text_scrolling.py
tests/: test_text_scrolling.py
