[metadata]
name = test-scrolling
version = 0.1.0
description = text scrolling across the screen
long_description = file: README.md
long_description_content_type = text/markdown
url =
author = Chad Larson
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >= 3.7

[options.entry_points]
console_script =
    text-scrolling = text_scrolling:main