[metadata]
name = text-scrolling
version = 0.2.0
description = text scrolling across the screen
long_description = file: README.md
long_description_content_type = text/markdown
url =
author = Chad Larson
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    text-scrolling = text_scrolling:main