[metadata]
name = text-scrolling
version = 0.3.0
description = text scrolling across the screen
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/text-scrolling
author = Chad Larson
license = MIT
license_file = LICENSE

[options]
py_modules = text_scrolling
python_requires = >= 3.7

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    text-scrolling = text_scrolling:main